<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/app_selection_layout"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/select_mode" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_marginBottom="10dp"
        android:background="#CFD8DC">
    </Spinner>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/select_source" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">

        <ImageView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:src="@drawable/gallery"
            android:id="@+id/gallery"
            android:clickable="true" />

        <ImageView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:src="@drawable/nexus2cee_motorolacameraold"
            android:id="@+id/camera"
            android:clickable="true" />

    </LinearLayout>


    <TextView
        android:id="@+id/img_selector_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/live_preview_link"
        android:textColor="#2196F3"
        android:onClick="previewImage"/>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="140dp"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:text="@string/test_ocr"
        android:id="@+id/button_test"
        android:background="@drawable/button"
        android:onClick="processImage" />


    <Button
        android:layout_height="wrap_content"
        android:layout_width="140dp"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:text="@string/show_records"
        android:id="@+id/button_records"
        android:background="@drawable/button"
        android:onClick="openRecords" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <com.facebook.login.widget.LoginButton
            android:layout_height="wrap_content"
            android:layout_width="140dp"
            android:layout_margin="10dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:text="@string/com_facebook_loginview_log_out_button"
            android:id="@+id/logoutFB" />
    </RelativeLayout>


</LinearLayout>