<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.temerarious.mccocr13.temerariousocr.activities.DetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:weightSum="2">

        <Button
            android:layout_height="wrap_content"
            android:layout_width="140dp"
            android:layout_margin="5dp"
            android:layout_gravity="center"
            android:text="@string/take_new_pic"
            android:id="@+id/button_retake"
            android:background="@drawable/button"
            android:layout_weight="1"
            android:onClick="retakePicture"/>

        <Button
            android:layout_height="wrap_content"
            android:layout_width="140dp"
            android:layout_margin="5dp"
            android:layout_gravity="center"
            android:text="@string/save_file"
            android:id="@+id/button_save"
            android:background="@drawable/button"
            android:layout_weight="1"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/result_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textSize="20sp"
                android:padding="10dp"
                android:text="@string/ocr_results"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
